# python-classy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  python-publish.yml
classy/: __init__.py  serializer.py
tests/: test_classy_object.py  test_mutability.py
